--- a/styles/style.css
+++ b/styles/style.css
@@ -121,3 +121,24 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+/* --- Social Media Icons --- */
+.social-icons {
+    margin-top: 10px;
+}
+
+.social-icons a {
+    margin: 0 10px;
+    display: inline-block;
+}
+
+.social-icons img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+}
+
+.social-icons img:hover {
+    transform: scale(1.1);
+}
