--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -47,35 +47,25 @@ nav a:hover {
 /* Hero Section */
 .hero {
   position: relative;
-  width: 100%;
-  height: 500px;
   text-align: center;
   color: white;
 }
 
 .hero img {
   width: 100%;
-  height: 500px;
+  height: 600px;
   object-fit: cover;
+  filter: brightness(70%);
 }
 
-.hero h1 {
+.hero h1,
+.hero article {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 10px 20px;
-  border-radius: 10px;
-}
-
-.hero article {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 15px 20px;
+  padding: 20px;
   border-radius: 10px;
 }
 
